implementacija docker kontejnera

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,12 +4,15 @@ services:
   app:
     build: .
     ports:
-      - "5000:5000"
+      - "5001:5001"
     volumes:
       - ./src:/app
     entrypoint: ["python", "app.py"]
     depends_on:
-      - db
+      db:
+        condition: service_healthy
+    environment:
+      - DATABASE_URL=postgresql://meteoapi:meteoapi123@db:5432/meteoapi
 
   db:
     image: postgres:latest
@@ -22,11 +25,17 @@ services:
       - "5432:5432"
     expose:
       - 5432
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U meteoapi -d meteoapi"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
 
   swagger:
     build: .
     ports:
-      - "8080:8080"
+      - "8080:5001"
     volumes:
       - ./src:/app
     entrypoint: ["python", "swagger.py"]
